# finance-flow-mcp-server

./: README.md  categories.json  finance_flow_server.py  pyproject.toml
